fix: livestream key
